add exit to read

--- a/rtl_synopsys_project/syn/Makefile
+++ b/rtl_synopsys_project/syn/Makefile
@@ -23,10 +23,10 @@ export TIMING_DIR	:= $(SYNDIR)/timing
 export WORK_DIR		:= $(SYNDIR)/work
 export DETAILS_DIR	:= $(SYNDIR)/details
 
-export CLK_NAME		:= clock
-export CLK_PER		:= 10
-export TOP_NAME		:= arbiter
-export TYPE			:= clock100
+export CLK_NAME		:=clock
+export CLK_PER		:=10
+export TOP_NAME		:=arbiter
+export TYPE			:=clock100
 export report_default_significant_digits := 4
 
 
@@ -44,7 +44,7 @@ init: clean
 	add synopsys2019;
 
 read:
-	design_vision -no_gui -x "read_verilog $(SRC_FILES_RTL);";
+	design_vision -no_gui -x "read_verilog $(SRC_FILES_RTL); exit;";
 
 compile:
 	design_vision -no_gui -x "read_verilog $(SRC_FILES_RTL); source Constraints.tcl; source CompileAnalyze.tcl; exit;";
