create better file removal in clean

--- a/rtl_synopsys_project/syn/Makefile
+++ b/rtl_synopsys_project/syn/Makefile
@@ -49,7 +49,12 @@ clean:
 	@if [ -d "$(WORK_DIR)" ]; then \
 		rm -r $(WORK_DIR); \
 	fi
-	@rm -rf $(SYNDIR)/alib-52; rm $(SYNDIR)/command.log; rm $(SYNDIR)/default.svf; rm $(SYNDIR)/fixed_names_init;
+	@if [ -d "$(SYNDIR)/alib-52" ]; then \
+		rm -r $(SYNDIR)/alib-52; \
+	fi
+	@[ -f $(SYNDIR)/command.log ] 		&& rm $(SYNDIR)/command.log; \
+	[ -f $(SYNDIR)/default.svf ] 		&& rm $(SYNDIR)/default.svf;  \
+	[ -f $(SYNDIR)/fixed_names_init ] 	&& rm $(SYNDIR)/fixed_names_init;
 
 superclean: clean
 	@if [ -d "$(TIMING_DIR)" ]; then \
